--- a/index.html
+++ b/index.html
@@ -5,31 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <main>
 
-  803K
-  Likes
+    <div id="container">
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <section id="container_up">
+
+        <img src="images/image-victor.jpg" alt="">
+
+      </section>
+
+      <section id="container_middle">
+
+        <h2>Victor Crest</h2>
+        <p id="age">26</p>
+        <div class="clearfix"></div>
+        <p>London</p>
+
+      </section>
+
+      <section id="container_down">
+
+        <section class="stats">
+          <h2>80K</h2>
+          <p>Followers</p>
+        </section>
+
+        <section class="stats">
+          <h2>803K</h2>
+          <p>Likes</p>
+        </section>
+
+        <section class="stats">
+          <h2>1.4K</h2>
+          <p>Photos</p>
+        </section>
+
+      </section>
+
+    </div>
+
+  </main>
 </body>
 </html>
